syntax = "proto3";
option go_package = "user-srv/proto";

package proto;

service User {
  rpc GetUserByID (UidReq) returns (UserInfoReply) {}
}

message UidReq {
  int64 uid = 1;
}

message UserInfoReply {
  int64 id = 1;
  string name = 2;
  int64 phone = 3;
}